@@ -18,11 +18,11 @@
                 <height>84</height>
                 <aligny>center</aligny>
                 <left>30</left>
-                <width>750</width>
-                <haspath>true</haspath>
+                <right>30</right>
                 <font>font_tiny</font>
                 <textcolor>dialog_fg_70</textcolor>
                 <label>$INFO[Control.GetLabel(140),,   ]$INFO[Player.FileName]</label>
+                <scroll>true</scroll>
             </control>
 
             <control type="label" id="140"><visible allowhiddenfocus="true">false</visible></control>
