@@ -1,3 +1,6 @@
+[B]0.9.24[/B]
+Fix subtitles download filename length and scroll
+
 [B]0.9.23[/B]
 Fix musicplaylist
 
